Prevent scrolling on mobile

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -44,7 +44,7 @@
   justify-content: space-around;
 }
 
-
-.external-links a, .external-links:visited {
+.external-links a,
+.external-links:visited {
   color: var(--color-primary);
 }
