--- a/app/styles/root.css
+++ b/app/styles/root.css
@@ -27,4 +27,5 @@ body {
   font-size: 16px;
   font-family: var(--ff-sans-serif);
   line-height: "1.4";
+  overflow: hidden;
 }
